[gd_scene load_steps=4 format=3 uid="uid://b5i2mxnbkyoaa"]

[ext_resource type="Script" path="res://Scenes/user settings screen/audio_slider_settings.gd" id="1_ud3s5"]

[sub_resource type="SystemFont" id="SystemFont_pd4hr"]
font_names = PackedStringArray("Impact")

[sub_resource type="SystemFont" id="SystemFont_3nyfq"]
font_names = PackedStringArray("Impact")

[node name="Audio_slider_settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ud3s5")
bus_name = "Master"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/separation = 42

[node name="Audio_name_lbl" type="Label" parent="HBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_pd4hr")
theme_override_font_sizes/font_size = 25
text = "Master Volume"

[node name="VSeparator" type="VSeparator" parent="HBoxContainer"]
layout_mode = 2

[node name="HSlider" type="HSlider" parent="HBoxContainer"]
custom_minimum_size = Vector2(100, 15)
layout_mode = 2
size_flags_vertical = 1
max_value = 1.0
step = 0.001

[node name="VSeparator2" type="VSeparator" parent="HBoxContainer"]
layout_mode = 2

[node name="Audio_num_lbl" type="Label" parent="HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_3nyfq")
theme_override_font_sizes/font_size = 25
text = "99.2"

[connection signal="value_changed" from="HBoxContainer/HSlider" to="." method="_on_h_slider_value_changed"]
